# SVG-Editor

./: CMakeLists.txt  main.cpp
command/: add_command.cpp  add_command.h  command.h  delete_command.cpp  delete_command.h  move_command.cpp  move_command.h  resize_command.cpp  resize_command.h  set_fill_color_command.cpp  set_fill_color_command.h  set_stroke_color_command.cpp  set_stroke_color_command.h  set_stroke_width_command.cpp  set_stroke_width_command.h
gui/: canvas.cpp  canvas.h  common_constants.h  mainwindow.cpp  mainwindow.h
gui/canvas/: canvas.cpp  canvas.h  canvas_commands.cpp  canvas_input.cpp  canvas_paint.cpp
gui/mainwindow/: mainwindow.cpp  mainwindow.h  mainwindow_actions.cpp  mainwindow_color.cpp  mainwindow_connections.cpp  mainwindow_file.cpp  mainwindow_toolbars.cpp
gui/tools/: circle_tool.cpp  circle_tool.h  hexagon_tool.cpp  hexagon_tool.h  line_tool.cpp  line_tool.h  polyline_tool.cpp  polyline_tool.h  rectangle_tool.cpp  rectangle_tool.h  rounded_rectangle_tool.cpp  rounded_rectangle_tool.h  select_tool.cpp  select_tool.h  select_tool_drag.cpp  select_tool_handles.cpp  select_tool_resize.cpp  text_tool.cpp  text_tool.h  tool.h
gui/tools/select/: select_tool.cpp  select_tool.h  select_tool_drag.cpp  select_tool_handles.cpp  select_tool_resize.cpp
gui/tools/shape/: circle_tool.cpp  circle_tool.h  hexagon_tool.cpp  hexagon_tool.h  line_tool.cpp  line_tool.h  polyline_tool.cpp  polyline_tool.h  rectangle_tool.cpp  rectangle_tool.h  rounded_rectangle_tool.cpp  rounded_rectangle_tool.h  shape_tool.cpp  shape_tool.h  text_tool.cpp  text_tool.h
gui/whiteboard/: whiteboard.cpp  whiteboard.h  whiteboard_commands.cpp  whiteboard_edit.cpp  whiteboard_input.cpp  whiteboard_paint.cpp  whiteboard_style.cpp
model/: add_command.cpp  add_command.h  circle.cpp  circle.h  command.h  delete_command.cpp  delete_command.h  diagram.cpp  diagram.h  graphics_object.cpp  graphics_object.h  hexagon.cpp  hexagon.h  line.cpp  line.h  move_command.h  polyline.cpp  polyline.h  rectangle.cpp  rectangle.h  resize_command.cpp  resize_command.h  rounded_rectangle.cpp  rounded_rectangle.h  text.cpp  text.h
parser/: svg_parser.cpp  svg_parser.h  svg_parser_shapes.cpp
